# p7zip

./: .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  ChangeLog  Dockerfile  FileDir.cpp  FileIO.cpp  Mayhemfile  README  README.md  SECURITY.md  StringConvert.cpp  TODO  install.sh  install_local_context_menu.sh  last_error  makefile  makefile.afl  makefile.aix_gcc  makefile.android_arm  makefile.beos  makefile.common  makefile.crc32  makefile.cygwin  makefile.cygwin64  makefile.cygwin64_asm  makefile.cygwin_asm  makefile.cygwin_clang  makefile.cygwin_clang_asm  makefile.djgpp  makefile.djgpp_watt  makefile.freebsd5  makefile.freebsd6+  makefile.glb  makefile.gprof  makefile.haiku  makefile.hpux-acc  makefile.hpux-acc_64  makefile.hpux-gcc  (+49 more)
.github/workflows/: Build.yml  ccpp.yml  linux- build.yml  linux-p7zip-CI.yml  macos-build.yml  macos-p7zip-CI.yml  mayhem.yml  release-linux.yml  release-macos.yml  release.yml  release_linux.yml  release_mac.yml  ubuntu.yml
Asm/x86/: 7zAsm.asm  7zCrcOpt_asm.asm  AesOpt.asm  Sha256Opt.asm
C/: 7zBuf.h  7zBuf2.c  7zStream.c  7zTypes.h  7zVersion.h  7zip_gcc_c.mak  Aes.c  Alloc.c  CpuArch.h  DllSecur.c  LzFind.c  LzFind.h  LzFindMt.c  LzFindMt.h  Lzma2Dec.c  Lzma2Dec.h  Lzma2Enc.c  Lzma2Enc.h  LzmaDec.c  LzmaDec.h  LzmaEnc.c  LzmaEnc.h  MtCoder.c  Ppmd7.c  Ppmd7.h  Ppmd8.c  Ppmd8.h  README.md  Threads.c  Threads.h  XzEnc.c  XzIn.c  makefile.glb
C/brotli/: Brotli-Adjust.sh  README.md  br_backward_references.c  br_backward_references_hq.c  br_bit_cost.c  br_bit_reader.c  br_block_splitter.c  br_brotli_bit_stream.c  br_cluster.c  br_command.c  br_compress_fragment.c  br_compress_fragment_two_pass.c  br_constants.c  br_context.c  br_decode.c  br_dictionary.c  br_dictionary_hash.c  br_encode.c  br_encoder_dict.c  br_entropy_encode.c  br_fast_log.c  br_histogram.c  br_huffman.c  br_literal_cost.c  br_memory.c  br_metablock.c  br_platform.c  br_state.c  br_static_dict.c  br_transform.c  br_utf8_util.c  decode.h  encode.h  port.h
C/fast-lzma2/: Makefile  README.md  dict_buffer.d  fl2_common.d  fl2_compress.d  fl2_decompress.d  fl2_pool.d  fl2_threading.d  libfast-lzma2.so.1.0  lzma2_dec.d  lzma2_enc.d  radix_bitpack.d  radix_mf.d  radix_struct.d  range_enc.d  util.d  xxhash.d
C/hashes/: blake3.h  hash.h
C/lizard/cmake_unofficial/: CMakeLists.txt
C/lz4/: lz4.c
C/lz5/: .travis.yml  README.md  appveyor.yml  lz5_Frame_format.md
C/lzham_codec/: CMakeLists.txt  LICENSE  README.md  lzham.sln
C/lzham_codec/example1/: example1.c  example1.vcxproj
C/lzham_codec/example2/: example2.c  example2.vcxproj
C/lzham_codec/example3/: example3.cpp  example3.vcxproj
C/lzham_codec/example4/: cfile_stream.cpp  cfile_stream.h  comp_stream.cpp  comp_stream.h  data_stream.cpp  data_stream.h  data_stream_serializer.h  dynamic_stream.cpp  dynamic_stream.h  example4.cpp  example4.vcxproj  mem_stream.cpp  mem_stream.h  stream_common.h
C/lzham_codec/lzhamcomp/: CMakeLists.txt  lzham_lzcomp_internal.cpp  lzham_pthreads_threading.cpp  lzham_pthreads_threading.h  lzham_win32_threading.h
C/lzham_codec/lzhamdecomp/: CMakeLists.txt  lzham_core.h  lzham_huffman_codes.cpp  lzham_mem.cpp  lzham_platform.cpp  lzham_platform.h  lzham_symbol_codec.cpp  lzham_symbol_codec.h  lzham_traits.h  lzham_vector.h
C/lzham_codec/lzhamdll/: CMakeLists.txt  lzham.vcxproj  lzham_api.cpp  lzham_dll_main.cpp  lzhamdll.def
C/lzham_codec/lzhamtest/: CMakeLists.txt  lzhamtest.cpp  lzhamtest.vcxproj  timer.cpp  timer.h
C/zstd/: zstd_ddict.c
C/zstdmt/: Makefile  brotli-mt.h  brotli-mt_common.c  brotli-mt_compress.c  brotli-mt_decompress.c  lizard-mt.h  lizard-mt_common.c  lizard-mt_compress.c  lizard-mt_decompress.c  lz4-mt.h  lz4-mt_common.c  lz4-mt_compress.c  lz4-mt_decompress.c  lz5-mt.h  lz5-mt_common.c  lz5-mt_compress.c  lz5-mt_decompress.c  memmt.h  snappy-mt.h  snappy-mt_common.cc  snappy-mt_compress.cc  snappy-mt_decompress.cc  threading.h  zstd-mt_threading.c
CPP/7zip/: 7zip_gcc.mak  7zip_gcc_additional.mak  Guid.txt  ICoder.h  LzmaDec_gcc.mak  cmpl_gcc.mak  var_clang.mak  var_clang_arm64.mak  var_clang_x64.mak  var_clang_x86.mak  var_gcc.mak  var_gcc_arm64.mak  var_gcc_x64.mak  var_gcc_x86.mak  var_mac_arm64.mak  var_mac_x64.mak  warn_clang.mak  warn_clang_mac.mak  warn_gcc.mak
CPP/Common/: Blake3Reg.cpp  C_FileIO.cpp  C_FileIO.h  Common.h  IntToString.cpp  Md2Reg.cpp  Md4Reg.cpp  Md5Reg.cpp  MyInitGuid.h  MyString.cpp  MyString.h  MyVector.h  MyWindows.h  NewHandler.cpp  Sha384Reg.cpp  Sha512Reg.cpp  Wildcard.cpp  Wildcard.h  XXH32Reg.cpp  XXH64Reg.cpp
CPP/Windows/: DLL.cpp  ErrorMsg.cpp  FileDir.cpp  FileDir.h  FileFind.cpp  FileIO.h  PropVariant.h  SecurityUtils.h  Synchronization2.h
Codecs/hashes/: blake3.h  hash.h
Codecs/lizard/: .travis.yml  Makefile
Codecs/lz5/: .gitignore  Makefile  NEWS  lz5_Block_format.md
DOC/: 7zC.txt  README.md  Struct.EAP  Struct.ldb  lzma.txt  readme.txt  src-history.txt
DOC/MANUAL/: 7-zip.chm  start.htm
GUI/: p7zipForFilemanager  p7zip_16.icns  p7zip_32.xpm
GUI/Contents/: Info.plist  PkgInfo
GUI/Lang/: ar.txt  cy.txt  da.txt  gl.txt  ko.txt  zh-cn.txt
GUI/kde3/: p7zip_compress.desktop  p7zip_compress2.desktop  p7zip_extract.desktop  p7zip_extract_subdir.desktop  p7zip_extract_to.desktop  p7zip_test.desktop  readme.txt
GUI/kde4/: p7zip_compress.desktop  p7zip_compress2.desktop  p7zip_extract.desktop  p7zip_extract_subdir.desktop  p7zip_extract_to.desktop  p7zip_test.desktop  readme.txt
Utils/: BenchMark.sh  bin_to_sources.py  file_7z.py  file_7zCon_sfx.py  file_7zFM.py  file_7zG.py  file_7z_so.py  file_7za.py  file_7zr.py  file_Client7z.py  file_Codecs_Lzham_so.py  file_Codecs_PKImplode_so.py  file_Codecs_Rar_so.py  file_LzmaCon.py  file_P7ZIP.py  file_TestUI.py  generate.py
Utils/CPUTest/: Benchmark.h  MyVersion.h
check/: check.sh  check_7za.sh  check_7zr.sh  check_Client7z.sh  check_install.sh  clean_all.sh
check/TMP_2975/: last_error
check/test/: 7za.exe.lz  7za.exe.lzma  7za.exe.lzma86  7za.exe.lzma_eos  (+13 more)
man1/: 7z.1  7za.1  7zr.1
rpm/: make_rpm.sh  p7zip.spec
testsuite/: arc.7z
(+438 files in other folders)
